# webatui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  cleaniness.yml  coverage.yml
examples/: README.md
examples/color_changer/: Cargo.toml  index.html
examples/color_changer/src/: main.rs
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/hello_world/: Cargo.toml  README.md
examples/hello_world/src/: main.rs
src/: backend.rs  lib.rs  prelude.rs  touch_scroll.rs  utils.rs
src/palette/: apprentice.rs  atelier.rs  atlas.rs  default.rs  gruvbox.rs  mod.rs
