[package]
name = "webatui"
version = "0.1.0"
edition = "2021"

[features]
apprentice = []
atelier = []
atlas = []
black_metal = []
brogrammer = []
brush_trees = []
circus = []
classic = []
codeschool = []
colors = []
cupertino = []
danqing = []
darcula = []
darkviolet = []
dracula = []
equilibrium = []
espresso = []
eva = []
framer = []
fruit_soda = []
gigavolt = []
github = []
gruvbox = []
hardcore = []
heetch = []
helios = []
horizon = []
humanoid = []
ia = []
icy = []
kimber = []
materia = []
material_theme = []
material_vivid = []
mellow = []
mexico_light = []
nebula = []
nord = []
nova = []
one_light = []
onedark = []
outrun = []
papercolor = []
pasque = []
pinky = []
porple = []
purpledream = []
qualia = []
rebecca = []
rose_pine = []
sagelight = []
sakura = []
sandcastle = []
shades_of_purple = []
silk = []
snazzy = []
solarflare = []
solarized = []
summercamp = []
summerfruit = []
synth_midnight = []
tender = []
twilight = []
unikitty = []
vice = []
windows = []
woodland = []
xcode_dust = []
zenburn = []

[dependencies]
ratatui = { version = "0.25", default-features = false }
web-sys = { version = "0.3", features = ["Window", "Screen", "TouchEvent", "TouchList", "Touch"] }
yew = { version = "0.21", features = ["csr"] }
hex-literal = "0.4.1"
enum_dispatch = "0.3"
