[package]
name = "webatui"
version = "0.1.1"
edition = "2021"
license = "LGPL-2.1"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]
categories = ["wasm", "tui"]
description = "Run your TUI apps in the broswer!"
readme = "README.md"
repository = "https://github.com/TylerBloom/webatui"

[dependencies]
base16-palettes = "0.1.0"
ratatui = { version = "0.27", default-features = false }
web-sys = { version = "0.3", features = ["Window", "Screen", "TouchEvent", "TouchList", "Touch", "CssStyleSheet", "StyleSheetList", "CssRuleList", "CssRule"] }
yew = { version = "0.21", features = ["csr"] }
